sass/style.sass
@charset "utf-8"

@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap')

@import "../bulma-0.9.3/sass/utilities/initial-variables.sass"
$family-sans-serif: "Roboto", sans-serif
$navbar-height: 4rem
@import "../bulma-0.9.3/bulma.sass"

#tsparticles
    position: absolute
    top: 0
    left: 0
    width: 100%
    height: 100%
    z-index: 1 // In front of invisible <coulums> to allow interacivity

.hero-body
    .gradient
        z-index: 2 // In front of particles
        position: relative // To keep z-index working also on mobile (would get static)
        border-radius: .4em
        background-image: linear-gradient(to right, transparentize(black, .7), hsla(0, 0%, 0%, 0))

// Fix position of anchors with navbar
.content
    h1
        &::before
            display: block
            content: " "
            margin-top: -110px
            height: 110px
            visibility: hidden
            pointer-events: none

